# sunbay-kernel-service

./: .gitignore  API.md  ARCHITECTURE.md  Cargo.toml  README.md  build-wasm.sh
config/: development.yaml  production.yaml
data/: .gitkeep
pkg/: sunbay_kernel_service_bg.wasm  sunbay_kernel_service_bg.wasm.d.ts
src/: config.rs  lib.rs  main.rs  wasm.rs
src/handlers/: emv.rs  health.rs  mod.rs  transaction.rs
src/models/: emv.rs  mod.rs  transaction.rs
src/services/: backend_client.rs  emv_processor.rs  mod.rs
src/utils/: crypto.rs  error.rs  logger.rs  mod.rs
